2002-07-25  Vino Crescini  <vfcrescini@froggy.com>

	* ChangeLog :

	  - ChangeLog started.

	* datastruct/indexedlist.h :
	* datastruct/indexedlist.c :

	  - Some cleanups.

	  - indexedlist_add() will no longer check for double entries. This
	    is now left for the calling function to do.

	  - Added 2 functions to allow the data pointers to be freed before
	    deletion.

	* symtab/symtab.c :

	  - Changed to reflect modifications to indexedlist.